syntax = "proto3";

package oceannik;

option go_package = "github.com/oceannik/oceannik/common/proto;pb";

service ProjectService {
  rpc ListProjects(ListProjectsRequest) returns (stream Project) {}

  rpc GetProject(GetProjectRequest) returns (Project) {}

  rpc SetProject(SetProjectRequest) returns (Project) {}
}

message Project {
  string name = 1;
  string description = 2;
  string repository_url = 3;
  string repository_branch = 4;
  string config_path = 5;
}

message ListProjectsRequest {}

message GetProjectRequest { string name = 1; }

message SetProjectRequest {
  string name = 1;
  string description = 2;
  string repository_url = 3;
  string repository_branch = 4;
  string config_path = 5;
  bool overwrite_if_exists = 6;
}
